--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 	<div class="page">
 		<header class="header">
 			<div class="logo logo_type_header-animals"></div>
+			<div></div>
 			<nav>
 				<ul class="header__menu header__menu_type_standart list">
 					<li class="header__nav-item">
