Исправить бордер-радиус partner контейнера

--- a/src/index.html
+++ b/src/index.html
@@ -398,7 +398,7 @@
 			</section>
 			<section class="main__section partners">
 				<h2 class="partners__title">Наши партнеры</h2>
-				<ul class="partners__container">
+				<ul class="partners__container border-radius">
 					<li class="partners__partner-item">
 						<div class="partners__logo-container">
 							<a href="https://lewibo.org/" class="partners__partner-link link">
