--- a/src/index.html
+++ b/src/index.html
@@ -595,14 +595,13 @@
 								кому хотите помогать, а мы будем присылать отчёты о его/её прогрессе.</p>
 							<p class="questions__text">• Помочь нам с покупкой материалов для занятий</p>
 							<p class="questions__text">«уя» открыт для всех детей: любой аульский ребёнок и подросток могут прийти
-								к нам,
-								если хочет увидеться с друзьями, послушать лекцию, почитать книжки или подождать,
+								к нам, если хочет увидеться с друзьями, послушать лекцию, почитать книжки или подождать,
 								пока папа-мама вернутся домой. Это абсолютно бесплатно и мы хотим, чтобы у нас всегда были
 								материалы, чтобы их занять, и перекусы, чтобы они не сидели голодные. Помогите нам с этим!</p>
 							<p class="questions__text">• Стать ментором или преподавателем онлайн</p>
 							<p class="questions__text">Приглашаем вас стать ментором, провести мастер-класс или лекцию (как онлайн,
-								так и
-								офлайн). Многим среди аульской молодёжи и детей не хватает примеров успешных взрослых, которые готовы с
+								так и офлайн). Многим среди аульской молодёжи и детей не хватает примеров успешных взрослых, которые
+								готовы с
 								ними общаться на равных и выслушивать их, а также дать совет и помочь со сложными вопросами. Или те,
 								кто работает в определённой сфере и может рассказать, где и чему следует учиться и как строить карьеру.
 								Если вы такой взрослый (хотя возраст не имеет значения), присоединяйтесь!</p>
